--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <script>
     // TON ADRESSE SERVEUR
-    const API_URL = "http://fi6.bot-hosting.net:21443";
+    const API_URL = "https://gianni-stats.loca.lt";
 
     async function refreshData() {
         try {
