--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <script>
     // TON ADRESSE SERVEUR
-    const API_URL = "https://gianni-stats.loca.lt";
+    const API_URL = "https://economically-pseudoetymological-serenity.ngrok-free.dev";
 
     async function refreshData() {
         try {
