--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="fr" data-theme="dark">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navigator Pro v11.5</title>
+    <link rel="icon" type="image/png" href="faviconWeb.png"> 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
